# swell-quant

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: architecture.md  data-module-decisions.md  frontend-plan.md  fund-research-plan.md  model-strategy.md  open-source-references.md  plan.md  research-conventions.md  roadmap.md  testing.md  usage-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: check_acceptance.py  check_akshare_trial.py  check_akshare_universe.py  check_config.py  check_data_source.py  check_fund_trial.py  check_progress.py  check_storage.py  run_akshare_trial.py  run_fund_trial.py  run_pipeline.py  serve_api.py  smoke_test.py
tests/: test_akshare_data.py  test_analysis_prices.py  test_api_server.py  test_backtest.py  test_backup.py  test_candidates.py  test_cli.py  test_config.py  test_duckdb_mirror.py  test_factors_evaluate.py  test_factors_ic_series.py  test_factors_momentum.py  test_factors_pipeline.py  test_factors_preprocess.py  test_factors_quality.py  test_factors_reversal.py  test_factors_value.py  test_factors_volatility.py  test_features.py  test_fund_data.py  test_funds.py  test_labels.py  test_llm_reporting.py  test_local_api.py  test_marketdata_adjust.py  test_marketdata_calendar.py  test_marketdata_collect.py  test_marketdata_fundamentals.py  test_marketdata_fundamentals_source.py  test_marketdata_index.py  test_marketdata_integration.py  test_marketdata_source_bars.py  test_marketdata_store.py  test_marketdata_universe.py  (+15 more)
(+99 files in other folders)
