[project]
name = "swell-quant"
version = "0.1.0"
description = "A-share daily quantitative research dashboard foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
