[project]
name = "swell-quant"
version = "0.1.0"
description = "A-share daily quantitative research dashboard foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
]

[project.scripts]
swell-quant = "swell_quant.cli:main"

[project.optional-dependencies]
data = [
  "akshare>=1.14",
]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "fastapi>=0.110",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
